--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'F22')">F22</button>
-  <button class="tablinks" onclick="openCity(event, 'F23')">F23</button>
-  <button class="tablinks" onclick="openCity(event, 'F24')">F24</button>
+  <button class="tablinks" onclick="openTAB(event, 'F22')">F22</button>
+  <button class="tablinks" onclick="openTAB(event, 'F23')">F23</button>
+  <button class="tablinks" onclick="openTAB(event, 'F24')">F24</button>
 </div>
 
 <div id="F22" class="tabcontent">
@@ -223,7 +223,7 @@
 </div>
 
 <script>
-function openCity(evt, cityName) {
+function openTAB(evt, tabName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
   for (i = 0; i < tabcontent.length; i++) {
@@ -233,7 +233,7 @@ function openCity(evt, cityName) {
   for (i = 0; i < tablinks.length; i++) {
     tablinks[i].className = tablinks[i].className.replace(" active", "");
   }
-  document.getElementById(cityName).style.display = "block";
+  document.getElementById(tabName).style.display = "block";
   evt.currentTarget.className += " active";
 
 }
