--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 </head>
 <body>
 <div class="tab">
-  <button class="tablinks" onclick="openTAB(event, 'F22')">F22</button>
-  <button class="tablinks" onclick="openTAB(event, 'F23')">F23</button>
-  <button class="tablinks" onclick="openTAB(event, 'F24')">F24</button>
+    <button class="tablinks" onclick="openTAB(event, 'F18')">F18</button>
+    <button class="tablinks" onclick="openTAB(event, 'F22')">F22</button>
+    <button class="tablinks" onclick="openTAB(event, 'F23')">F23</button>
+    <button class="tablinks" onclick="openTAB(event, 'F24')">F24</button>
+    <button class="tablinks" onclick="openTAB(event, 'F39')">F39</button>
+</div>
+
+<div id="F18" class="tabcontent">
+    <h3>F18</h3>
+    <img src="images/f18.png">
 </div>
 
 <div id="F22" class="tabcontent">
@@ -221,6 +228,11 @@
     </tr>
   </table>
 </div>
+
+<div id="F39" class="tabcontent">
+    <h3>F22</h3>
+    <img src="images/f39">
+  </div>
 
 <script>
 function openTAB(evt, tabName) {
